SymmetricDS - 3.1.11 (Released 2012-11-28) 
=======================================
- 0000894: [New Feature] Add property to turn sync_on_incoming off for sym_ table triggers (chenson) - closed.

SymmetricDS - 3.1.10 (Released 2012-11-27) 
==========================================
- 0000926: [Bug] Staging area is not being cleaned up. Can cause out of memory or file system issues. (chenson) - closed.
- 0000913: [Bug] Verify that a staged resource reference exists before returning the reference. Symmetricds wasn't allowing me to remove failed (chenson) - closed.

SymmetricDS - 3.1.9 (Released 2012-10-30) 
=========================================
- 0000889: [Bug] dbimport of xml format fails with mark/reset error (chenson) - closed.
- 0000886: [Improvement] Routing of configuration data (especially the node tables) is very slow when there are lots of nodes (chenson) - closed.

SymmetricDS - 3.1.8 (Released 2012-10-29) 
=========================================
- 0000860: [Bug] Timestamp with timezone doesn't work with timestamp new wins conflict resolution (chenson) - closed.
- 0000868: [Task] dbimport needs to support imports from xml format (chenson) - closed.
- 0000870: [Improvement] Do not attempt to route data if a node does not have an identity (chenson) - closed.
- 0000875: [Bug] Node attempts to re-register when it attempts to pull from a non-registration server node that does yet have its security record (chenson) - closed.
- 0000876: [Improvement] During schema upgrade log the old version before attempting upgrade (chenson) - closed.
- 0000877: [Improvement] Downgrade not supported. Don't allow a older version of symmetricds start up against an newer schema (chenson) - closed.
- 0000882: [Bug] Stats Purge Job needs to be clustered. Running on multiple nodes can cause deadlocks (chenson) - closed.
- 0000883: [Bug] Non-authenticated pull wasn't being recorded as a failed pull attempt in sym_node_communication (chenson) - closed.