@@ -24,7 +24,9 @@ import java.io.IOException;
 import java.io.StringWriter;
 import java.util.ArrayList;
 import java.util.Date;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 
 import org.apache.commons.lang.StringUtils;
@@ -93,6 +95,8 @@ abstract public class AbstractSymmetricDialect implements ISymmetricDialect {
     protected boolean supportsTransactionViews = false;
     
     protected List<IDatabaseUpgradeListener> databaseUpgradeListeners = new ArrayList<IDatabaseUpgradeListener>();
+    
+    protected Map<String,String> sqlReplacementTokens = new HashMap<String, String>();
 
     public AbstractSymmetricDialect(IParameterService parameterService, IDatabasePlatform platform) {
         this.parameterService = parameterService;
@@ -100,6 +104,8 @@ abstract public class AbstractSymmetricDialect implements ISymmetricDialect {
 
         log.info("The DbDialect being used is {}", this.getClass().getName());
 
+        buildSqlReplacementTokens();
+        
         ISqlTemplate sqlTemplate = this.platform.getSqlTemplate();
         this.databaseMajorVersion = sqlTemplate.getDatabaseMajorVersion();
         this.databaseMinorVersion = sqlTemplate.getDatabaseMinorVersion();
@@ -107,10 +113,19 @@ abstract public class AbstractSymmetricDialect implements ISymmetricDialect {
         this.databaseProductVersion = sqlTemplate.getDatabaseProductVersion();
         this.driverName = sqlTemplate.getDriverName();
         this.driverVersion = sqlTemplate.getDriverVersion();
+                
     }
 
     public boolean requiresAutoCommitFalseToSetFetchSize() {
         return false;
+    }
+    
+    protected void buildSqlReplacementTokens() {
+        sqlReplacementTokens.put("selectDataUsingGapsSqlHint", "");
+    }
+    
+    public Map<String, String> getSqlReplacementTokens() {
+        return sqlReplacementTokens;
     }
 
     /*
